Closed
Bug 471681
Opened 17 years ago
Closed 17 years ago
Add a null check in CHBrowserView contentViewer
Categories
(Camino Graveyard :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: stuart.morgan+bugzilla, Assigned: stuart.morgan+bugzilla)
Details
(Keywords: fixed1.8.1.22)
Attachments
(1 file)
|
600 bytes,
patch
|
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
The stacks in 471409 are showing a null pointer deference in contentViewer, so presumably docShell is null. Given that we've never seen that before and 1Password is installed I'm not convinced that it's something that should legitimately be able to happen, but there's no reason not to add a guard there.
Attachment #354961 -
Flags: superreview?(mikepinkerton)
FriscoFrog on the forum also was seeing crashes like bug 471409 on the forum; he had a mess of add-ons, but the common one with 471409 is 1Password.
http://forums.mozillazine.org/viewtopic.php?p=5351085#p5351085
Bug 471941 shows this in 1.6.6, too (and 1Password was again in the mix); I think we want this in 1.6.7 if it will help.
Flags: camino1.6.7?
Comment 3•17 years ago
|
||
Comment on attachment 354961 [details] [diff] [review]
guard against null
sr=pink
i wish we had a better grasp of why we're getting a null docShell here. Seems other things will break down the line.
Attachment #354961 -
Flags: superreview?(mikepinkerton) → superreview+
Landed on cvs trunk for Stuart.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Landed on the 18branch ahead of 1.6.7.
Flags: camino1.6.7? → camino1.6.7+
Keywords: fixed1.8.1.21
Keywords: fixed1.8.1.21 → fixed1.8.1.22
You need to log in
before you can comment on or make changes to this bug.
Description
•