Bug 471681 - Add a null check in CHBrowserView contentViewer. Patch by Stuart Morgan <stuart.morgan+bugzilla@gmail.com>, r/sr=pink